--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -27,13 +27,21 @@
     "You can add image, diagrams, whatever you need to ensure that you understand the concepts below.\n",
     "\n",
     "### Input Layer:\n",
+    "the first layer in a multilayer neural network; made up of individual nodes consisting of discrete values that are the inital values to be input into subsequent layer(s) of the neural network\n",
     "### Hidden Layer:\n",
+    "the layer(s) that exist between the input and output layers of a neural network; one or more lateral layers made up of nodes that receive the values from the initial INPUT LAYER \n",
     "### Output Layer:\n",
+    "the final layer in a multilayer neural network; layer of node(s) that is the result of the transformations which occur within the hidden layer(s) \n",
     "### Neuron:\n",
+    "either that which is being simulated in the analogy of \"neural network\", or the simulations of which we speak when we talk about the NODES within these layers. holds values; takes IN, may TRANSFORM, and puts OUT some value; facilitates a relative connection between other nodes/neurons\n",
     "### Weight:\n",
+    "the vector(s) by which transformations within the hidden layers occur (at the node-level)\n",
     "### Activation Function:\n",
+    "** also known as a TRANSFER function bc they determine how much \"SIGNAL\" is transferred to the next layer; this function implements some threshold (via function) to define the final output of a neural network; common functions include sigmoid, tanh, relu, and step\n",
     "### Node Map:\n",
-    "### Perceptron:\n"
+    "the spatial representation of the architecture of the input, hidden, and output layers\n",
+    "### Perceptron:\n",
+    "a simple neural network consisting of one or more hidden layers ****"
    ]
   },
   {
@@ -77,22 +85,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2  y\n",
+       "0   0   0  1\n",
+       "1   1   0  1\n",
+       "2   0   1  1\n",
+       "3   1   1  0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "data = { 'x1': [0,1,0,1],\n",
     "         'x2': [0,0,1,1],\n",
     "         'y':  [1,1,1,0]\n",
     "       }\n",
     "\n",
-    "df = pd.DataFrame.from_dict(data).astype('int')"
+    "df = pd.DataFrame.from_dict(data).astype('int')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -100,16 +179,86 @@
    },
    "outputs": [],
    "source": [
-    "##### Your Code Here #####\n",
+    "def sigmoid(x):\n",
+    "    '''\n",
+    "    defining a sigmoid activation function to update weights\n",
+    "    '''\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivative(x):\n",
+    "    '''\n",
+    "    defining sigmoid derivative to complement sigmoid activation function\n",
+    "    '''\n",
+    "    sx = sigmoid(x)\n",
+    "    return sx * (1 - sx)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# define starting weights\n",
+    "weights = np.random.random((3,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "non-broadcastable output operand with shape (3,1) doesn't match the broadcast shape (3,4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-a0486a69edcc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0madjustments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0merror\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msigmoid_derivative\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactivated_output\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# calculate new weights with adjustments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mweights\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madjustments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'weights after training'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: non-broadcastable output operand with shape (3,1) doesn't match the broadcast shape (3,4)"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (10000):\n",
+    "    # apply weights to inputs, sum\n",
+    "    weighted_sum = np.dot(df, weights)\n",
+    "    # apply activation function \n",
+    "    activated_output = sigmoid(weighted_sum)\n",
+    "    # calculate error between activated output and true values\n",
+    "    error = data['y'] - activated_output\n",
+    "    # adjust by error \n",
+    "    adjustments = error * sigmoid_derivative(activated_output)\n",
+    "    # calculate new weights with adjustments\n",
+    "    weights += np.dot(df.T, adjustments)\n",
+    "    \n",
+    "    print('weights after training')\n",
+    "    print(weights)\n",
+    "    print('\\noutput after training')\n",
+    "    print(activated_output)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +391,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +410,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768, 9)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diabetes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +438,45 @@
     "\n",
     "feats = list(diabetes)[:-1]\n",
     "\n",
-    "X = ..."
+    "x = diabetes.drop('Outcome', axis=1).values\n",
+    "y = diabetes.Outcome.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((768, 8), (768,))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feats)"
    ]
   },
   {
@@ -286,35 +493,35 @@
     "\n",
     "class Perceptron:\n",
     "    \n",
-    "    def __init__(self, niter = 10):\n",
+    "    def __init__(self, niter = 10, rate = 0.01):\n",
     "        self.niter = niter\n",
+    "        self.rate = rate\n",
     "    \n",
     "    def __sigmoid(self, x):\n",
-    "        return None\n",
+    "        return 1 / (1 + np.exp(-x))\n",
     "    \n",
     "    def __sigmoid_derivative(self, x):\n",
-    "        return None\n",
+    "        sx = sigmoid(x)\n",
+    "        return return sx * (1 - sx)\n",
     "\n",
-    "    def fit(self, X, y):\n",
+    "    def fit(self, x, y):\n",
     "    \"\"\"Fit training data\n",
     "    X : Training vectors, X.shape : [#samples, #features]\n",
     "    y : Target values, y.shape : [#samples]\n",
     "    \"\"\"\n",
     "\n",
     "        # Randomly Initialize Weights\n",
-    "        weights = ...\n",
-    "\n",
+    "        weights = np.random.random(x.shape[1])\n",
     "        for i in range(self.niter):\n",
     "            # Weighted sum of inputs / weights\n",
-    "\n",
+    "            \n",
     "            # Activate!\n",
-    "\n",
+    "            \n",
     "            # Cac error\n",
-    "\n",
+    "            \n",
     "            # Update the Weights\n",
     "\n",
-    "\n",
-    "    def predict(self, X):\n",
+    "    def predict(self, x):\n",
     "    \"\"\"Return class label after unit step\"\"\"\n",
     "        return None"
    ]
@@ -343,9 +550,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "nlp",
    "language": "python",
-   "name": "python3"
+   "name": "nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -357,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
