--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment-Copy1.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment-Copy1.ipynb
@@ -37,11 +37,11 @@
     "### Weight:\n",
     "the vector(s) by which transformations within the hidden layers occur (at the node-level)\n",
     "### Activation Function:\n",
-    "**add more** also known as a TRANSFER function bc they determine how much \"SIGNAL\" is transferred to the next layer; this function implements some threshold (via function) to define the final output of a neural network; common functions include sigmoid, tanh, relu, and step\n",
+    "** also known as a TRANSFER function bc they determine how much \"SIGNAL\" is transferred to the next layer; this function implements some threshold (via function) to define the final output of a neural network; common functions include sigmoid, tanh, relu, and step\n",
     "### Node Map:\n",
     "the spatial representation of the architecture of the input, hidden, and output layers\n",
     "### Perceptron:\n",
-    "a simple neural network consisting of one or more hidden layers ****add more****"
+    "a simple neural network consisting of one or more hidden layers ****"
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "3   1   1  0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -196,16 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define starting weights"
+    "# define starting weights\n",
+    "weights = np.random.random((3,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +215,7 @@
        "[1, 1, 1, 0]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,9 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "non-broadcastable output operand with shape (3,1) doesn't match the broadcast shape (3,4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-a0486a69edcc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0madjustments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0merror\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msigmoid_derivative\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactivated_output\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# calculate new weights with adjustments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mweights\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madjustments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'weights after training'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: non-broadcastable output operand with shape (3,1) doesn't match the broadcast shape (3,4)"
+     ]
+    }
+   ],
    "source": [
     "for i in range (10000):\n",
     "    # apply weights to inputs, sum\n",
@@ -239,7 +252,7 @@
     "    # adjust by error \n",
     "    adjustments = error * sigmoid_derivative(activated_output)\n",
     "    # calculate new weights with adjustments\n",
-    "    weights += np.dot(df, adjustments)\n",
+    "    weights += np.dot(df.T, adjustments)\n",
     "    \n",
     "    print('weights after training')\n",
     "    print(weights)\n",
