correcting Perceptron definition

--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -41,7 +41,7 @@
     "### Node Map:\n",
     "the spatial representation of the architecture of the input, hidden, and output layers\n",
     "### Perceptron:\n",
-    "a simple neural network consisting of one or more hidden layers ****add more****"
+    "a simple neural network which ONLY consists of an INPUT layer and an OUTPUT layer ****add more****"
    ]
   },
   {
