clarified activation function definition

--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -37,7 +37,7 @@
     "### Weight:\n",
     "the vector(s) by which transformations within the hidden layers occur (at the node-level)\n",
     "### Activation Function:\n",
-    "**add more** also known as a TRANSFER function bc they determine how much \"SIGNAL\" is transferred to the next layer; this function implements some threshold (via function) to define the final output of a neural network; common functions include sigmoid, tanh, relu, and step\n",
+    "**add more** also known as a TRANSFER function bc they determine how much \"SIGNAL\" is transferred to the next layer; this function implements some threshold (via function) to define the final output passed from a node; common functions include sigmoid, tanh, relu, and step\n",
     "### Node Map:\n",
     "the spatial representation of the architecture of the input, hidden, and output layers\n",
     "### Perceptron:\n",
