push sprintnotes update, mod1 hw 1/2 complete

--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -190,37 +190,187 @@
     "    defining sigmoid derivative to complement sigmoid activation function\n",
     "    '''\n",
     "    sx = sigmoid(x)\n",
-    "    return sx * (1 - sx)\n",
-    "\n"
+    "    return sx * (1 - sx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define starting weights"
+    "# define starting weights\n",
+    "weights = 2 * np.random.random((3,1)) - 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 1, 0]"
+       "array([[-0.45388239],\n",
+       "       [-0.35939126],\n",
+       "       [ 0.26012535]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['y']"
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct_outputs = np.array([data['y']]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(correct_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.26012535],\n",
+       "       [-0.19375705],\n",
+       "       [-0.09926592],\n",
+       "       [-0.81327366]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_sum = np.dot(df, weights)\n",
+    "weighted_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5646671 ],\n",
+       "       [0.45171171],\n",
+       "       [0.47520388],\n",
+       "       [0.30719334]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activated_output = sigmoid(weighted_sum)\n",
+    "activated_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.4353329 ],\n",
+       "       [ 0.54828829],\n",
+       "       [ 0.52479612],\n",
+       "       [-0.30719334]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error = correct_outputs - activated_output\n",
+    "error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.10701273],\n",
+       "       [ 0.1357936 ],\n",
+       "       [ 0.13087636],\n",
+       "       [-0.0653786 ]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adjustments = error * sigmoid_derivative(weighted_sum)\n",
+    "adjustments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.3834674 ],\n",
+       "       [-0.29389351],\n",
+       "       [ 0.63380804]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights += np.dot(df.T, adjustments)\n",
+    "weights"
    ]
   },
   {
@@ -228,23 +378,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights after training\n",
+      "[[-2.58656415]\n",
+      " [-2.58632592]\n",
+      " [ 8.0176366 ]]\n",
+      "\n",
+      "output after training\n",
+      "[[0.9996705 ]\n",
+      " [0.99564058]\n",
+      " [0.99564161]\n",
+      " [0.00563636]]\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range (10000):\n",
+    "for i in range (10000): # number chosen to decrease error?\n",
     "    # apply weights to inputs, sum\n",
     "    weighted_sum = np.dot(df, weights)\n",
     "    # apply activation function \n",
     "    activated_output = sigmoid(weighted_sum)\n",
     "    # calculate error between activated output and true values\n",
-    "    error = data['y'] - activated_output\n",
+    "    error = correct_outputs - activated_output\n",
     "    # adjust by error \n",
-    "    adjustments = error * sigmoid_derivative(activated_output)\n",
+    "    adjustments = error * sigmoid_derivative(weighted_sum)\n",
     "    # calculate new weights with adjustments\n",
-    "    weights += np.dot(df, adjustments)\n",
+    "    weights += np.dot(df.T, adjustments)\n",
     "    \n",
-    "    print('weights after training')\n",
-    "    print(weights)\n",
-    "    print('\\noutput after training')\n",
-    "    print(activated_output)"
+    "print('weights after training')\n",
+    "print(weights)\n",
+    "print('\\noutput after training')\n",
+    "print(activated_output)"
    ]
   },
   {
